# Bipedal-Walking-with-RL

./: .gitignore  README.md  agent.ipynb  config.py  nchw73-agent-code.py  pyproject.toml  sweep.yaml
agent/: agent-log.txt
configs/: hardcore.yml  normal.yml
hardcore_env/: hardcore-agent-log.txt  hardcore-agent.ipynb
nchw73/: Dreamer-nchw73-agent-code.ipynb  nchw73-agent-code.ipynb  nchw73-agent-code.py  nchw73-agent-hardcore-log.txt  nchw73-agent-log.txt  nchw73-hardcore-agent-code.ipynb  nchw73-normal-agent-code.ipynb
normal_env/: normal-agent.ipynb
wandb/sweep-oeqa0egn/: config-9cb8bt1t.yaml
