[project]
name = "bipedal-walking-with-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium[atari,box2d,other]>=1.2.3",
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rldurham>=0.1.1",
    "scipy>=1.15.3",
    "swig>=4.4.1",
    "torch>=2.10.0",
]
